[project]
name = "nespreso-client"
version = "0.1.0"
description = "Python client for the NeSPReSO API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "COAPS, FSU" }]
dependencies = [
  "httpx>=0.24.0",
  "numpy>=1.21.0",
  # requests is used by grid client; keep to match existing behavior
  "requests>=2.28.0",
]

[project.optional-dependencies]
merge = [
  "xarray>=2022.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/nespreso-client"
Issues = "https://github.com/your-org/nespreso-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nespreso_client"]

[tool.hatch.build.targets.sdist]
include = [
  "src/nespreso_client/**",
  "README.md",
  "pyproject.toml",
]


